Sale section is done.

--- a/Client/index.html
+++ b/Client/index.html
@@ -11,7 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
             rel="stylesheet"
         />
-        <title>hisui</title>
+        <title>.GC</title>
     </head>
     <body>
         <div id="root"></div>
