--- a/Client/index.html
+++ b/Client/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
     <head>
         <meta charset="UTF-8" />
@@ -11,7 +11,7 @@
             href="https://fonts.googleapis.com/css2?family=Gabarito:wght@400..900&display=swap"
             rel="stylesheet"
         />
-        <title>.GC</title>
+        <title>GC.</title>
     </head>
     <body>
         <div id="root"></div>
